Audit trail, /reject endpoint and comment fields (#68)
* drive-by: .prettierrc for consistent YAML formatting

* bump to next dev version

* add /reject and /events endpoints and comments field to others

* add /reject and /events to inmemory db

* add /reject and /events to handler

* add /reject and /events to e2e tests

* add /reject and /events to rqlite

* Makefile tweaks

* update docs

* add a 10m timeout to helm upgrades

* tweak to trigger github build

* pr: fix typos

* debug helm upgrade

* debug bump resources

* Revert "debug bump resources"

This reverts commit 20e11ffe31a543c163f3e97395e0b731ed545987.

* debug reduce rqlite pvc to 1Gi

* debug set db to inmemory

* Revert "debug set db to inmemory"

This reverts commit f8da5fb004fe085f181b55a627d808cd83ae5def.

* debug e2e with generic only

* Revert "debug e2e with generic only"

This reverts commit 6d48ae063513d77c42594e77e503cac2c0501d6f.

* Revert "debug helm upgrade"

This reverts commit 5796ed80d5a6af4423bfa03a451d21327d7b3902.

* Revert "rm unsupported rustfs helm param from Makefile"

This reverts commit 300d62000fb4c65fa9c5733fe49e926332f37203.

* replace default rustfs creds to fix deploy issue

* pr: @milanmlft feedback
