# internal/types/main.go
@@ -1,5 +1,9 @@
 package types
 
+import (
+	"time"
+)
+
 // Unique identifier of a project.
 // A project is a collection of people/data that share
 // the same set of egress approvals
@@ -12,20 +16,80 @@ type UserId string
 // Destination for which a file can be egressed
 type Destination string
 
-// An egress approval, recording the approving user
-// and the destination for which it is approved
-type Approval struct {
+// Describes an egress related event tracked at file level
+// An egress event is either an approval, a rejection or a download
+type Event struct {
+	Time   time.Time
+	Action EventAction
+	EventDetails
+}
+
+// Describes the details of an event
+type EventDetails struct {
 	UserId      UserId
 	Destination Destination
+	Comment     string
+}
+
+// The specific action of an event
+type EventAction string
+
+// Supported event actions
+const (
+	EventActionApproval  EventAction = "Approval"
+	EventActionDownload  EventAction = "Download"
+	EventActionRejection EventAction = "Rejection"
+)
+
+// An egress file approval, recording the approving user
+// and the destination for which it is approved
+// An approval is a type of an egress event
+type Approval EventDetails
+
+// List of egress events associated with a file
+type FileEvents []Event
+
+// Get approvals of a file
+// Multiple approvals with the same {UserId, Destination} are de-duplicated
+// A rejection that comes after an approval cancels that approval
+// Events must be chronologically ordered when this method is called and
+// the order is maintained in the filtered approval list
+func (fe FileEvents) Approvals() FileApprovals {
+	type approvalKey struct {
+		userId      UserId
+		destination Destination
+	}
+	filter := map[approvalKey]bool{}
+	order := []Approval{}
+
+	for _, e := range fe {
+		if e.Action != EventActionApproval && e.Action != EventActionRejection {
+			continue
+		}
+		key := approvalKey{userId: e.UserId, destination: e.Destination}
+		if _, got := filter[key]; !got {
+			order = append(order, Approval(e.EventDetails))
+		}
+		filter[key] = e.Action == EventActionApproval
+	}
+	// Return filtered approvals in same the order as input
+	approvals := FileApprovals{}
+	for _, ap := range order {
+		key := approvalKey{userId: ap.UserId, destination: ap.Destination}
+		if filter[key] {
+			approvals = append(approvals, ap)
+		}
+	}
+	return approvals
 }
 
 // List of approvals granted for a file
 type FileApprovals []Approval
 
 // Get approvals for the given destination
-func (f FileApprovals) ForDestination(destination Destination) FileApprovals {
+func (fa FileApprovals) ForDestination(destination Destination) FileApprovals {
 	filtered := FileApprovals{}
-	for _, approval := range f {
+	for _, approval := range fa {
 		if approval.Destination == destination {
 			filtered = append(filtered, approval)
 		}
@@ -33,13 +97,25 @@ func (f FileApprovals) ForDestination(destination Destination) FileApprovals {
 	return filtered
 }
 
+// Map of files to a list of events associated with the file
+type ProjectEvents map[FileId]FileEvents
+
+// Return approvals granted for all the files in the project
+func (pe ProjectEvents) ProjectApprovals() ProjectApprovals {
+	approvals := ProjectApprovals{}
+	for fileId, events := range pe {
+		approvals[fileId] = events.Approvals()
+	}
+	return approvals
+}
+
 // Map of files to a list of approvals granted for the file
 type ProjectApprovals map[FileId]FileApprovals
 
 // Get the file approvals for a particular file. If it doesn't
-// exist then get returns an empty set of file approvals
-func (p ProjectApprovals) FileApprovals(fileId FileId) FileApprovals {
-	approvals, exists := p[fileId]
+// exist then return an empty set of file approvals
+func (pa ProjectApprovals) FileApprovals(fileId FileId) FileApprovals {
+	approvals, exists := pa[fileId]
 	if !exists {
 		return FileApprovals{}
 	}
